--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -6,6 +6,9 @@
 
 .profile__avatar {
   margin-right: 20px;
+  height: 190px;
+  width: 190px;
+  border-radius: 10px;
 }
 
 .profile__column {
@@ -23,9 +26,48 @@
 }
 
 .profile__edit-btn {
+  display: flex;
   margin-top: auto;
+  background: none;
+  border: none;
+  justify-content: left;
+  color: rgba(33, 33, 33, 1);
+  gap: 8px;
 }
 
 .profile__add-btn {
+  display: flex;
   margin-left: auto;
+  height: 52px;
+  width: 149px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  background-color: rgba(33, 33, 33, 1);
+  border-radius: 15px;
+  color: rgb(252, 245, 229);
+}
+
+.profile__add-btn img {
+  height: 12px;
+  width: 12px;
+}
+
+@media screen and (max-width: 627px) {
+  .profile {
+    flex-direction: column;
+    max-width: 282px;
+    align-items: center;
+    text-align: center;
+  }
+
+  .profile__avatar {
+    margin-right: 0;
+    height: 80px;
+    width: 80px;
+  }
+
+  .profile__add-btn {
+    margin: 0;
+  }
 }
