Footer Added + Card Updates

--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -4,10 +4,12 @@
 
 .cards__list {
   list-style-type: none;
-  padding: 0;
-  margin: 0;
+  padding: 36px 0;
+  margin: 0 auto;
   display: grid;
+  max-width: 1280px;
   grid-template-columns: repeat(auto-fit, 413px);
   justify-content: center;
   gap: 40px 20px;
+  border-bottom: rgba(33, 33, 33, 0.4) 1px solid;
 }
