--- a/blocks/card.css
+++ b/blocks/card.css
@@ -7,6 +7,7 @@
   width: 413px;
   object-fit: cover;
   display: block;
+  border-radius: 10px;
 }
 
 .card__content {
@@ -15,8 +16,13 @@
   justify-content: space-between;
 }
 
+.card__title {
+  margin: 0;
+  padding-top: 12px;
+}
+
 .card__like-btn {
-  background-image: url(../images/like.svg);
+  background-image: url(../images/heart.svg);
   width: 23px;
   height: 20px;
   border: none;
