--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -13,3 +13,9 @@
   gap: 40px 20px;
   border-bottom: rgba(33, 33, 33, 0.4) 1px solid;
 }
+
+@media screen and (max-width: 627) {
+  .cards__list {
+    grid-template-columns: repeat(auto-fit, 288px);
+  }
+}
