--- a/blocks/card.css
+++ b/blocks/card.css
@@ -19,6 +19,10 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  color: rgba(33, 33, 33, 1);
 }
 
 .card__like-btn {
