--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -8,4 +8,8 @@
 .copyright {
   padding: 0;
   margin: 0;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 1;
+  color: rgba(33, 33, 33, 0.7);
 }
