--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -27,16 +27,21 @@
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   max-width: 420px;
+  color: rgba(33, 33, 33, 1);
 }
 
 .profile__description {
   margin: 0;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1;
   display: -webkit-box;
   overflow: hidden;
   text-overflow: ellipsis;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   max-width: 420px;
+  color: rgba(33, 33, 33, 0.7);
 }
 
 .profile__edit-btn {
@@ -47,6 +52,9 @@
   justify-content: left;
   color: rgba(33, 33, 33, 1);
   gap: 8px;
+  font-weight: 500;
+  line-height: 1;
+  font-size: 16px;
 }
 
 .profile__add-btn {
