--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,15 +1,15 @@
 .footer {
+  margin: 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 136px;
 }
 
 .footer__copyright {
   padding: 0;
   margin: 0;
   font-weight: 400;
-  font-size: 20px;
+  font-size: 16px;
   line-height: 1;
   color: rgba(33, 33, 33, 0.7);
 }
