--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -4,7 +4,7 @@
 
 .cards__list {
   list-style-type: none;
-  padding: 36px 0;
+  padding-bottom: 40px;
   margin: 0 auto;
   display: grid;
   max-width: 1280px;
@@ -17,5 +17,7 @@
 @media screen and (max-width: 627) {
   .cards__list {
     grid-template-columns: repeat(auto-fit, 288px);
+    padding-bottom: 20px;
+    gap: 0 20px;
   }
 }
