--- a/blocks/card.css
+++ b/blocks/card.css
@@ -3,7 +3,7 @@
   width: 100%;
   object-fit: cover;
   display: block;
-  border-radius: 10px;
+  border-radius: 8px;
 }
 
 .card__content {
@@ -26,7 +26,11 @@
 }
 
 .card__like-btn {
+  margin-top: 12px;
   background-image: url(../images/heart.svg);
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
   width: 23px;
   height: 20px;
   border: none;
@@ -41,5 +45,6 @@
 
   .card__title {
     max-width: 228px;
+    font-size: 16px;
   }
 }
