--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -8,7 +8,7 @@
   margin-right: 20px;
   height: 190px;
   width: 190px;
-  border-radius: 10px;
+  border-radius: 8px;
 }
 
 .profile__column {
@@ -46,6 +46,7 @@
 
 .profile__edit-btn {
   display: flex;
+  padding: 0;
   margin-top: auto;
   background: none;
   border: none;
@@ -59,6 +60,7 @@
 
 .profile__add-btn {
   display: flex;
+  margin-top: auto;
   margin-left: auto;
   height: 52px;
   width: 149px;
@@ -66,7 +68,7 @@
   align-items: center;
   gap: 8px;
   background-color: rgba(33, 33, 33, 1);
-  border-radius: 15px;
+  border-radius: 8px;
   color: rgb(252, 245, 229);
 }
 
