--- a/blocks/card.css
+++ b/blocks/card.css
@@ -28,6 +28,7 @@
 .card__like-btn {
   margin-top: 12px;
   background-image: url(../images/heart.svg);
+  opacity: 40%;
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
@@ -40,7 +41,8 @@
 }
 
 .card__like-btn:hover {
-  color: rgba(33, 33, 33, 0.8);
+  background-image: url(../images/heart.svg);
+  opacity: 100%;
 }
 
 @media screen and (max-width: 627px) {
