--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -67,6 +67,7 @@
   display: flex;
   margin-top: auto;
   margin-left: auto;
+  border: none;
   height: 52px;
   width: 149px;
   justify-content: center;
