--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -1,7 +1,3 @@
-/* ToDo - Add correct Font Styles for everything
-          Add Save Button Styles
-          Responsive Design - for Mobile*/
-
 .modal {
   visibility: hidden;
   background-color: rgba(0, 0, 0, 0.5);
@@ -14,6 +10,7 @@
   justify-content: center;
   align-items: center;
   padding: 10px;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
 }
 
 .modal_is-opened {
@@ -35,11 +32,17 @@
   right: 50px;
   width: 40px;
   height: 40px;
-  /* ToDo - add close icon & make sure it looks correct */
+  background-image: url(../images/closeIcon.svg);
+  border: none;
+  background-color: transparent;
+  opacity: 40%;
 }
 
 .modal__title {
   margin: 0 0 32px;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 1;
 }
 
 .modal__form {
@@ -49,20 +52,41 @@
 
 .modal__label {
   margin: 0 0 32px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.1;
+  color: rgba(33, 33, 33, 0.7);
 }
 
 .modal__input {
   display: block;
   margin: 8px 0 0;
+  max-width: 630px;
   width: 100%;
-  /* ToDo - Border, Padding */
+  border-radius: 8px;
+  border: 1px solid;
+  padding: 12px 16px;
+  font-size: 20px;
+  line-height: 1;
 }
 
 .modal__input::placeholder {
-  color: rgba(33, 33, 33, 0.4);
+  color: rgba(33, 33, 33, 0.3);
 }
 
 .modal__submit-btn {
   max-width: 156px;
-  /* ToDo - remove max-width in media query */
+  border-radius: 8px;
+  padding: 18px 32px;
+  background-color: rgb(33, 33, 33);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1;
+  color: rgb(252, 245, 229);
+}
+
+@media screen and (max-width: 320px) {
+  .modal__submit-btn {
+    max-width: none;
+  }
 }
